Added support for batching JOINs